# substitute-complement

./: .gitignore  LICENSE  company_external_effects.ipynb  internel_effects.ipynb  pyproject.toml
