[project]
name = "substitute-complement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bertopic>=0.17.3",
    "hdbscan>=0.8.40",
    "ipykernel>=6.29.5",
    "kaleido>=1.0.0",
    "llm-utils",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "python-dotenv>=1.1.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "scipy==1.15.3",
    "sentence-transformers>=5.0.0",
    "snowflake-snowpark-python[pandas]>=1.33.0",
    "statsmodels>=0.14.4",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
]

[tool.uv.sources]
llm-utils = { git = "https://github.com/matthewbbone/llm-utils.git" }
